deployment/dok8s/overlays/prod/dashboard-ingress.yaml

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/auth-url: "https://$host/oauth2/auth"
    nginx.ingress.kubernetes.io/auth-signin: "https://$host/oauth2/start?rd=$escaped_request_uri"
  name: dashboard-external-auth-oauth2
spec:
  rules:
  - host: dashboard.goalrevolution.live
    http:
      paths:
      - backend:
          serviceName: dashboard
          servicePort: 80
        path: /
      - backend:
          serviceName: horizon
          servicePort: 4000
        path: /api
  tls:
  - hosts:
    - dashboard.goalrevolution.live
    secretName: cryptosoccer-dashboard-tls

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: dashboard-oauth2-proxy
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "http://www.mysite.com/error-cert.html"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt-freeverse
spec:
  rules:
  - host: dashboard.goalrevolution.live
    http:
      paths:
      - backend:
          serviceName: oauth2-proxy
          servicePort: 4180
        path: /oauth2
  tls:
  - hosts:
    - dashboard.goalrevolution.live
    secretName: cryptosoccer-dashboard-tls
